// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrim render should render correctly 1`] = `
<div>
  <div
    className="bpk-scrim"
  />
  <div
    className="bpk-scrim-content bpk-scrim-content--padded"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <TestComponent
      closeEvents={
        Object {
          "onMouseDown": [Function],
          "onMouseMove": [Function],
          "onMouseUp": [Function],
          "onTouchEnd": [Function],
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        }
      }
      getDialogRef={[Function]}
      isIphone={false}
      onClose={[Function]}
    />
  </div>
</div>
`;

exports[`BpkScrim render should render correctly when is iPhone 1`] = `
<div>
  <div
    className="bpk-scrim"
  />
  <div
    className="bpk-scrim-content bpk-scrim-content--padded bpk-scrim-content--iphone-fix"
    onMouseDown={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <TestComponent
      closeEvents={
        Object {
          "onMouseDown": [Function],
          "onMouseMove": [Function],
          "onMouseUp": [Function],
          "onTouchEnd": [Function],
          "onTouchMove": [Function],
          "onTouchStart": [Function],
        }
      }
      getDialogRef={[Function]}
      isIphone={true}
      onClose={[Function]}
    />
  </div>
</div>
`;
